@@ -2,6 +2,7 @@
  - abook can be compiled with g++
  - attempt to improve --datafile behavior
  - html filter update (Morten Brix Pedersen)
+ - store rcfile and addressbook to .abook directory
 
 2002-02-04
  - use getopt to parse command line (also new options added)
